salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/CurrencyQuote__c.object-meta.xml
<CustomObject>
    <description>Registro histórico e inmutable de cada cotización exitosa de una Oportunidad en otra moneda. Se crea desde el canal externo o desde el agente, y nunca modifica la Oportunidad.</description>
    <label>Cotización de Moneda</label>
    <nameField>
        <displayFormat>CQ-{000000}</displayFormat>
        <label>Número de cotización</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones de Moneda</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>