salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Canal que pidió la cotización: sistema externo o agente.</description>
    <label>Canal de origen</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExternalSystem</fullName>
                <label>Sistema externo</label>
            </value>
            <value>
                <fullName>Agent</fullName>
                <label>Agente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>