salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/ConvertedAmount__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAmount__c</fullName>
    <description>Monto original × tipo de cambio, truncado a 2 decimales.</description>
    <label>Monto convertido</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>