salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <description>Tipo de cambio informado por el proveedor (1 moneda original = X moneda destino).</description>
    <label>Tipo de cambio</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>