salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Oportunidad cotizada. Impide borrar la Oportunidad mientras tenga cotizaciones (FR-020a).</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cotizaciones de Moneda</relationshipLabel>
    <relationshipName>CurrencyQuotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>