salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/OriginalAmount__c.field-meta.xml
<CustomField>
    <fullName>OriginalAmount__c</fullName>
    <description>Monto de la Oportunidad al momento de cotizar, en su moneda original.</description>
    <label>Monto original</label>
    <required>true</required>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>