salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/OriginalCurrency__c.field-meta.xml
<CustomField>
    <fullName>OriginalCurrency__c</fullName>
    <description>Código ISO 4217 de la moneda de la Oportunidad (su CurrencyIsoCode).</description>
    <label>Moneda original</label>
    <required>true</required>
    <type>Text</type>
    <length>3</length>
</CustomField>