salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/QuotedAt__c.field-meta.xml
<CustomField>
    <fullName>QuotedAt__c</fullName>
    <description>Momento en que el sistema obtuvo el tipo de cambio (UTC).</description>
    <label>Fecha/hora de cotización</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>