salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/RateDate__c.field-meta.xml
<CustomField>
    <fullName>RateDate__c</fullName>
    <description>Fecha en que el proveedor publicó el tipo de cambio usado.</description>
    <label>Fecha de publicación de la tasa</label>
    <required>true</required>
    <type>Date</type>
</CustomField>