salesforce-sdd-integration/force-app/main/default/objects/CurrencyQuote__c/fields/TargetCurrency__c.field-meta.xml
<CustomField>
    <fullName>TargetCurrency__c</fullName>
    <description>Código ISO 4217 de la moneda a la que se convirtió.</description>
    <label>Moneda destino</label>
    <required>true</required>
    <type>Text</type>
    <length>3</length>
</CustomField>